--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -886,10 +886,11 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		text-align: center;
+		text-align: right;
 		padding: 1.5em 0 1.5em 0;
 		z-index: 1;
 		overflow: hidden;
+		background-color: #ffffff
 	}
 
 		#nav > ul {
