--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2043,7 +2043,7 @@ input, select, textarea {
 						display: block;
 						position: absolute;
 						right: 0;
-						top: 50%;
+						top: 70%;
 						margin-top: -1.375em;
 						width: 2.75em;
 						height: 2.75em;
@@ -2075,6 +2075,51 @@ input, select, textarea {
 						width: 3em;
 						padding-right: 0.25em;
 					}
+
+
+
+
+
+
+					#main > .panel.intro .pic .notarrow {
+						display: block;
+						position: absolute;
+						left: 0;
+						top: 70%;
+						margin-top: -1.375em;
+						width: 2.75em;
+						height: 2.75em;
+						background: #000;
+						background: rgba(0, 0, 0, 0.75);
+						color: #ffffff;
+						text-align: center;
+						line-height: 2.75em;
+						font-size: 1.5em;
+						z-index: 1;
+						-moz-transition: width .15s ease-in-out, padding-left .15s ease-in-out;
+						-webkit-transition: width .15s ease-in-out, padding-left .15s ease-in-out;
+						-ms-transition: width .15s ease-in-out, padding-left .15s ease-in-out;
+						transition: width .15s ease-in-out, padding-left .15s ease-in-out;
+					}
+
+						#main > .panel.intro .pic .notarrow:before {
+							position: relative;
+							padding-left: 0;
+							top: 0.125em;
+						}
+
+						#main > .panel.intro .pic .notarrow span {
+							display: block;
+							text-indent: -9999px;
+						}
+
+					#main > .panel.intro .pic:hover .notarrow {
+						width: 3em;
+						padding-left: 0.25em;
+					}
+
+
+
 
 				#main > .panel.intro header {
 					-moz-flex-grow: 1;
