--- a/sandboxassets/css/main.css
+++ b/sandboxassets/css/main.css
@@ -32,10 +32,9 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-/* svg {
-  background: url('https://upload.wikimedia.org/wikipedia/commons/c/c4/Icehockeylayout.svg') no-repeat;
-  width:100%;
-} */
+svg {
+position:absolute
+}
 
 
 .blue-line{
